<resources>
    <string name="app_name">WGU Scheduler</string>
    <string name="command_clear_database">Clear Database</string>
    <string name="command_db_integrity_check">Integrity Check</string>
    <string name="command_delete">Delete</string>
    <string name="command_manage_data">Manage Data</string>
    <string name="command_reset_database">Reset Database</string>
    <string name="command_reset_with_sample_data">Reset with Sample Data</string>
    <string name="command_save_changes">Save Changes</string>
    <string name="command_manage_alerts">Manage Alerts</string>
    <string name="format_message_add_sample_data_error">An unexpected error has occurred while populating sample data: %s</string>
    <string name="format_message_delete_error">An unexpected error has occurred while removing the record from the database: %s</string>
    <string name="format_message_read_error">An unexpected error has occurred while retrieving the record to the database: %s</string>
    <string name="format_message_reset_db_error">An unexpected error has occurred while resetting the database: %s</string>
    <string name="format_message_save_error">An unexpected error has occurred while saving the record to the database: %s</string>
    <string name="format_message_save_warning">%s\n\nSave, anyway?</string>
    <string name="format_message_delete_warning">%s\n\nDelete, anyway?</string>
    <string name="label_competency_units">Competency Units</string>
    <string name="label_completed">Completed:</string>
    <string name="label_course_number">Course Number</string>
    <string name="label_dropped">Dropped</string>
    <string name="label_edit_mentor_name">Edit mentor name</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_end">End</string>
    <string name="label_end_of_term">End of Term</string>
    <string name="label_evaluating">Currently Being Evaluated</string>
    <string name="label_goal">Goal:</string>
    <string name="label_in_progress">In Progress</string>
    <string name="label_mentor">Mentor</string>
    <string name="label_mentor_name">Mentor Name</string>
    <string name="label_name_of_term">Name of Term</string>
    <string name="label_none">(none)</string>
    <string name="label_not_passed">Not Passed</string>
    <string name="label_not_started">Not Started</string>
    <string name="label_notes">Notes</string>
    <string name="label_objective_assessment">Objective Assessment</string>
    <string name="label_passed">Passed</string>
    <string name="label_performance_evaluation">Performance Evaluation</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_planned">Planned</string>
    <string name="label_pre_assessment">Pre-assessment</string>
    <string name="label_start">Start</string>
    <string name="label_start_of_term">Start of Term</string>
    <string name="label_status">Status:</string>
    <string name="label_term">Term</string>
    <string name="label_title">Title</string>
    <string name="label_to_lc">to</string>
    <string name="label_unplanned">Unplanned</string>
    <string name="message_actual_end_required">Actual end date is required</string>
    <string name="message_actual_start_after_end">Actual start cannot occur after the end date</string>
    <string name="message_after_term_end">Date occurs after term end date</string>
    <string name="message_before_term_start">Date occurs before term start date</string>
    <string name="message_actual_start_required">Actual start date is required</string>
    <string name="message_add_sample_data_confirm">Warning! This action cannot be undone!\n\nAre you sure you want to delete all data stored by this app?</string>
    <string name="message_all_data_delete_warning">Warning! These next two options will delete all data stored by this app!</string>
    <string name="message_competency_units_required">Competency units not specified</string>
    <string name="message_course_id_not_specified">Course ID not specified</string>
    <string name="message_assessment_id_not_specified">Assessment ID not specified</string>
    <string name="message_course_no_assessments">Course has no assessments.</string>
    <string name="message_course_number_required">Course number cannot be empty</string>
    <string name="message_assessment_code_required">Assessment Code cannot be empty</string>
    <string name="message_completion_date_required">Completion date is required</string>
    <string name="message_delete_mentor_confirm">This action cannot be undone!\n\nAll courses currently associated with this mentor will no longer have one.\n\nAre you sure you want to delete this mentor?</string>
    <string name="message_delete_term_confirm">This action cannot be undone!\n\nAre you sure you want to delete this term?</string>
    <string name="message_delete_course_confirm">This action cannot be undone!\n\nAre you sure you want to delete this course?</string>
    <string name="message_delete_course_fail">Failed to delete course.\n\nPerhaps one or more assessments or alerts could not be deleted.</string>
    <string name="message_delete_mentor_fail">Failed to delete mentor.\n\nPerhaps one or more courses, assessments or alerts could not be deleted.</string>
    <string name="message_delete_term_fail">Failed to delete term.\n\nPerhaps one or more courses, assessments or alerts could not be deleted.</string>
    <string name="message_delete_assessment_fail">Failed to delete assessment.\n\nPerhaps one or more alerts could not be deleted.</string>
    <string name="message_delete_assessment_confirm">This action cannot be undone!\n\nAre you sure you want to delete this assessment?</string>
    <string name="message_delete_alert_confirm">This action cannot be undone!\n\nAre you sure you want to delete this alert?</string>
    <string name="message_discard_changes">There are changes which have not been saved.\n\nDiscard unsaved changes?</string>
    <string name="message_edit_email_addresses">Edit email addresses</string>
    <string name="message_edit_phone_numbers">Edit phone numbers</string>
    <string name="message_expected_end_required">Expected end date is required</string>
    <string name="message_expected_start_after_end">Expected start cannot occur after expected end</string>
    <string name="message_expected_start_required">Expected start date is required</string>
    <string name="message_in_progress">In progress…</string>
    <string name="message_invalid_competency_units_value">Invalid number value for competency units</string>
    <string name="message_invalid_parentheses">(invalid)</string>
    <string name="message_missing_parentheses">(missing)</string>
    <string name="message_invalid_number">Invalid number value</string>
    <string name="message_mentor_not_found">Mentor not found in database.</string>
    <string name="message_mentor_not_restored">Mentor not restored from state.</string>
    <string name="message_assessment_not_found">Assessment not found in database.</string>
    <string name="message_assessment_not_restored">Assessment not restored from state.</string>
    <string name="message_course_not_found">Course not found in database.</string>
    <string name="message_course_not_restored">Course not restored from state.</string>
    <string name="message_term_not_found">Term not found in database.</string>
    <string name="message_term_not_restored">Term not restored from state.</string>
    <string name="message_name_required">Name cannot be empty</string>
    <string name="message_no_mentor">(no mentor)</string>
    <string name="message_phone_or_email_required">* Phone number or email address required</string>
    <string name="message_invalid_email_address">Invalid email address</string>
    <string name="message_invalid_phone_number">Invalid phone number</string>
    <string name="message_required">* Required</string>
    <string name="message_recommended">* Recommended</string>
    <string name="message_reset_db_confirm">Warning! This action cannot be undone!\n\nAre you sure you want to delete all data stored by this app?</string>
    <string name="message_start_after_end">Start date cannot occur after the end date</string>
    <string name="message_start_required_with_end">Start date is required if end date is specified</string>
    <string name="message_term_id_not_specified">Term ID not specified</string>
    <string name="message_term_no_courses">Term has no courses.</string>
    <string name="message_term_not_selected">Term not selected</string>
    <string name="message_course_not_selected">Course not selected</string>
    <string name="message_title_required">Title cannot be empty</string>
    <string name="preference_prefer_email">prefer_email</string>
    <string name="preference_alert_time">alert_time</string>
    <string name="preference_next_notification_id">next_notification_id</string>
    <string name="response_no">No</string>
    <string name="response_yes">Yes</string>
    <string name="tab_title_email">Email</string>
    <string name="tab_title_general">General</string>
    <string name="tab_title_phone">Phone</string>
    <string name="title_activity_edit">Edit</string>
    <string name="format_mentor">Mentor: %s</string>
    <string name="title_activity_edit_phone_numbers">Edit Phone Numbers</string>
    <string name="title_activity_edit_term">Edit Term</string>
    <string name="title_activity_manage_data">Manage Data</string>
    <string name="title_activity_mentor_detail">Mentor Details</string>
    <string name="title_activity_new_mentor">Add New Mentor</string>
    <string name="title_activity_new_term">Add New Term</string>
    <string name="title_activity_settings">Settings</string>
    <string name="format_course">Course %s: %s</string>
    <string name="format_assessment">%s %s</string>
    <string name="format_assessment_name">%s %s: %s</string>
    <string name="label_term_colon">&termColon;</string>
    <string name="format_term">&termColon; %s</string>
    <string name="title_actual">Actual:</string>
    <string name="title_add_sample_data_error">Add Sample Data Error</string>
    <string name="title_assessments">Assessments</string>
    <string name="title_change_mentor_name">Change Mentor Name</string>
    <string name="title_courses">Courses</string>
    <string name="title_database_integrity_check">Database Integrity Checking</string>
    <string name="title_dates">Dates</string>
    <string name="title_delete_email">Delete Email Address</string>
    <string name="title_delete_error">Delete Error</string>
    <string name="title_delete_warning">Delete Warning</string>
    <string name="title_delete_mentor">Delete Mentor</string>
    <string name="title_delete_assessment">Delete Assessment</string>
    <string name="title_expected">Expected:</string>
    <string name="title_mentor_listing">Mentor Listing</string>
    <string name="title_alerts">Alerts</string>
    <string name="title_reset_database">Reset Database</string>
    <string name="tooltip_clear_database">Removes all data from the database</string>
    <string name="tooltip_reset_with_sample_data">Deletes all existing data and populates database with sample data</string>
    <string name="label_active">Active</string>
    <string name="label_past">Past</string>
    <string name="label_upcoming">Upcoming</string>
    <string name="message_no_alerts">No alerts to show.</string>
    <string name="label_event_date">Event Date</string>
    <string name="label_days_before_start">Days Before Start</string>
    <string name="label_days_before_end">Days Before End</string>
    <string name="label_specific_date">Specific Date</string>
    <string name="label_message">Message (optional)</string>
    <string name="label_share_assessment">Share Assessment Information</string>
    <string name="title_daily_alarm_time">Daily Alarm Time</string>
    <string name="title_add_alert">Add Alert</string>
</resources>