<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/title_alerts">
        <Erwine.Leonard.T.wguscheduler356334.TimePreference
            android:defaultValue="420"
            android:key="@string/preference_alert_time"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:title="@string/title_daily_alarm_time"
            app:layout="?android:attr/preferenceLayoutChild" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/title_mentor_listing">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/preference_prefer_email"
            android:summaryOff="The mentor's primary phone number will be displayed in the mentor listing if it has been specified."
            android:summaryOn="The mentor's primary email address will be displayed in the mentor listing if it has been specified."
            android:title="Prefer email over phone" />

    </PreferenceCategory>

</PreferenceScreen>