<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ManageDataActivity">

    <Button
        android:id="@+id/dbIntegrityCheckButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/command_db_integrity_check" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:background="@android:drawable/alert_light_frame">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_error"
                android:padding="@dimen/text_margin"
                android:text="@string/title_reset_database"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/color_control_normal" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_all_data_delete_warning"
                android:textColor="@color/color_error" />

            <Button
                android:id="@+id/resetDatabaseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:text="@string/command_clear_database"
                android:tooltipText="@string/tooltip_clear_database" />

            <Button
                android:id="@+id/addSampleDataButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/command_reset_with_sample_data"
                android:tooltipText="@string/tooltip_reset_with_sample_data" />
        </LinearLayout>
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.cardview.widget.CardView>
</LinearLayout>