<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="0,2"
    android:stretchColumns="1,3"
    tools:context=".ui.course.CourseDatesFragment">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/label_start"
            android:textAlignment="center"
            android:textAppearance="@style/WGU.Scheduler.FieldLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:text="@string/label_end"
            android:textAlignment="center"
            android:textAppearance="@style/WGU.Scheduler.FieldLabel" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/title_expected"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/WGU.Scheduler.FieldLabel" />

        <com.google.android.material.chip.Chip
            android:id="@+id/expectedStartChip"
            style="@style/WGU.Scheduler.Chip.Entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/label_to_lc" />

        <com.google.android.material.chip.Chip
            android:id="@+id/expectedEndChip"
            style="@style/WGU.Scheduler.Chip.Entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/title_actual"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/WGU.Scheduler.FieldLabel" />

        <com.google.android.material.chip.Chip
            android:id="@+id/actualStartChip"
            style="@style/WGU.Scheduler.Chip.Entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/label_to_lc" />

        <com.google.android.material.chip.Chip
            android:id="@+id/actualEndChip"
            style="@style/WGU.Scheduler.Chip.Entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1" />
    </TableRow>

</TableLayout>