<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.mentor.MentorPropertiesFragment">

    <TextView
        android:id="@+id/mentorNameLabelTextView"
        style="@style/WGU.Scheduler.FieldLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/mentorNameEditText"
        android:text="@string/label_mentor_name" />

    <EditText
        android:id="@+id/mentorNameEditText"
        style="@style/WGU.Scheduler.TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/phoneNumberLabelTextView"
        style="@style/WGU.Scheduler.FieldLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/phoneNumberEditText"
        android:text="@string/label_phone_number" />

    <EditText
        android:id="@+id/phoneNumberEditText"
        style="@style/WGU.Scheduler.TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/emailAddressLabelTextView"
        style="@style/WGU.Scheduler.FieldLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/emailAddressEditText"
        android:text="@string/label_email_address" />

    <EditText
        android:id="@+id/emailAddressEditText"
        style="@style/WGU.Scheduler.TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/mentorNotesLabelTextView"
        style="@style/WGU.Scheduler.FieldLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/mentorNotesTextView"
        android:text="@string/label_notes" />

    <TextView
        android:id="@+id/mentorNotesTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:gravity="top"
        android:isScrollContainer="true"
        android:scrollIndicators="right"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="right" />

</LinearLayout>